--- a/src/libs/chart/index.css
+++ b/src/libs/chart/index.css
@@ -2,10 +2,10 @@
     /*position: absolute;*/
     /*top:100px;*/
     /*left: 300px;*/
-    height: 280px;
-    width: 220px;
+    height: 300px;
+    width: 200px;
     border:1px solid darkgray;
-    padding: 40px;
+    /*padding: 40px;*/
 
 }
 
