--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
-.test{
-    padding: 5px;
+.test1 {
+    position: relative;
+    margin: 10px;
+    /*top: 30px;*/
+    /*left: 300px;*/
+    /*padding: 5px;*/
+    height: 100px;
+    width: 100px;
+    border: 1px solid gray;
+}
+
+.test2 {
+    position: absolute;
+    top: 10px;
+    left: 50px;
+    background-color: #6699cc;
+    height: 30px;
+    width: 30px;
 }
