--- a/src/libs/chart/index.css
+++ b/src/libs/chart/index.css
@@ -2,6 +2,7 @@
     /*position: absolute;*/
     /*top:100px;*/
     /*left: 300px;*/
+    position: relative;
     height: 300px;
     width: 200px;
     border:1px solid darkgray;
@@ -9,8 +10,8 @@
 
 }
 
-#chart{
-    width: 100%;
-    height: 100%;
+.chart{
+    position: absolute;
 }
+
 
