--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,12 @@
-.test1 {
-    position: relative;
-    margin: 10px;
-    /*top: 30px;*/
-    /*left: 300px;*/
-    /*padding: 5px;*/
-    height: 100px;
-    width: 100px;
-    border: 1px solid gray;
+body {
+    padding: 50px;
 }
 
-.test2 {
-    position: absolute;
-    top: 10px;
-    left: 50px;
-    background-color: #6699cc;
-    height: 30px;
-    width: 30px;
+div.panel .close{
+    padding-right: 3px;
+    padding-left: 3px;
+}
+
+textarea{
+    resize: vertical;
 }
