leaflet in webix

--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,15 @@ body {
     background-color: snow;
 }
 
-div.panel .close{
+div.panel .close {
     padding-right: 3px;
     padding-left: 3px;
 }
 
-textarea{
+textarea {
     resize: vertical;
+}
+
+#map {
+    height: 180px;
 }
